# twitchbot

./: .travis.yml  Cargo.toml  README.md  codecov.yml  install.sh  rustfmt.toml
.github/workflows/: rust.yml
app/: main.rs
app/commands/: bot.rs  bot_description.rs  echo.rs  help.rs  lua.rs  mod.rs
src/: banphrase.rs  bot.rs  cooldown.rs  core.rs  event.rs  executor.rs  history.rs  irc.pest  irc.rs  lib.rs  lua.rs  main.rs  message_history.rs  messaging.rs  model.rs  permissions.rs  prelude.rs  state.rs  tmi.rs  util.rs
src/core/: bot.rs  commands.rs  cooldown.rs  executor.rs  history.rs  lua.rs  messaging.rs  mod.rs  model.rs  permissions.rs  prelude.rs
