[package]
name = "modelflat_bot"
version = "0.1.0"
authors = ["modelflat"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "modelflat_bot"
path = "app/main.rs"

[dependencies]
url = "*"
tungstenite = "*"
log = "*"
env_logger = "*"
async-std = "*"
futures = "*"
futures-locks = "*"

[dependencies.reqwest]
version = "0.10.0-alpha.2"
features = [ "json" ]

[dependencies.tokio]
version = "0.2.0-alpha.6"
features = [ "rt-full", "macros" ]

[dependencies.async-tungstenite]
version = "*"
default-features = false
features = [ "connect", "native-tls", "async_std_runtime", "tls-base" ]
