[package]
name = "modelflat_bot"
version = "0.1.0"
authors = ["modelflat"]
edition = "2018"

[lib]
name = "bot"
path = "src/lib.rs"

[[bin]]
name = "modelflat_bot"
path = "app/main.rs"

[dependencies]
url = "2.1"
log = "0.4"
env_logger = "0.7"
async-std = "1.4"
async-trait = "0.1"
futures = "0.3"
futures-locks = "0.5"
rlua = "0.17"
chashmap = "2.2"

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dependencies.reqwest]
version = "0.10.0-alpha.2"
features = [ "json" ]

[dependencies.tokio]
version = "0.2.0-alpha.6"
features = [ "rt-full", "macros" ]

[dependencies.tungstenite]
version = "0.9"

[dependencies.async-tungstenite]
version = "0.2"
default-features = false
features = [ "connect", "native-tls", "async_std_runtime", "tls-base" ]
